--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="title" content="Rediscovery for Spotify">
+  <meta name="description" content="Select a timespan and discover what you added to your playlists at that time.">
+  <meta name="keywords" content="Spotify,Playlists,Music,Playlist">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.0/normalize.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
