--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <meta name="title" content="Rediscovery for Spotify">
   <meta name="description" content="Select a timespan and discover what you added to your playlists at that time.">
   <meta name="keywords" content="Spotify,Playlists,Music,Playlist">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon-32x32.png">
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.0/normalize.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
